FullQa New/src/objects/GoLiveLogEntry__c.object
<CustomObject>
    <description>A sub-table of the GoLive object that allows users to create log entries recording comments regarding Notes, Phone Calls, Emails, Voicemails, or general GoLive updates</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>A comment box to record any pertinent notes related to the customer GoLive</description>
        <inlineHelpText>Record any pertinent notes related to the GoLive here</inlineHelpText>
        <label>Comment</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer contact that a log entry is related to</description>
        <inlineHelpText>The customer contact that a log entry is related to</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>GoLive_Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntryType__c</fullName>
        <description>Indicates what type of log entry any particular comment refers to</description>
        <inlineHelpText>Indicates what type of log entry any particular comment refers to</inlineHelpText>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoLive__c</fullName>
        <description>Parent object of a particular GoLive log</description>
        <inlineHelpText>This is the parent object of a particular GoLive log</inlineHelpText>
        <label>GoLive</label>
        <referenceTo>GoLive__c</referenceTo>
        <relationshipName>GoLiveLogEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>(Deprecated) GoLive Log</label>
    <nameField>
        <label>GoLive Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoLive Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>